versión inicial del blog

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     Este proyecto es mi primer paso para documentar mi viaje en [Tu Industria/Campo].
                     Mi objetivo es [Tu Objetivo].
                 </p>
-                <a href="#" class="inline-block mt-6 bg-blue-600 text-white font-medium py-2 px-5 rounded-lg shadow-md hover:bg-blue-700 transition-colors">
+                <a href="./cv.pdf" class="inline-block mt-6 bg-blue-600 text-white font-medium py-2 px-5 rounded-lg shadow-md hover:bg-blue-700 transition-colors">
                     <!-- TODO: Sube tu CV (PDF) al repositorio y enlaza aquí -->
                     Ver mi CV completo
                 </a>
@@ -100,7 +100,7 @@
                         Este es un resumen de mi primer artículo. Aquí hablaré sobre [Tema del artículo].
                         Aprender a programar y desplegar este sitio es una aventura...
                     </p>
-                    <a href="#" class="text-blue-600 font-medium mt-4 inline-block hover:underline">
+                    <a href="./articulo1.html" class="text-blue-600 font-medium mt-4 inline-block hover:underline">
                         Leer más &rarr;
                     </a>
                 </div>
