--- a/articulo1.html
+++ b/articulo1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Primer Artículo - Mi Blog</title>
+    <title>Mi Primer Artículo - del Blog</title>
     
     <!-- 
       IMPORTANTE: Copiamos la misma configuración de Tailwind y fuentes
