--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
                     <h3 class="text-2xl font-bold mb-2">El Siguiente Paso</h3>
                     <p class="text-gray-500 mb-4 text-sm">Próximamente</p>
                     <p class="text-gray-700 leading-relaxed">
-                        Aquí irá mi próximo artículo sobre [Otro Tema].
+                        Aquí va mi próximo artículo sobre el tema.
                     </p>
-                    <a href="#" class="text-blue-600 font-medium mt-4 inline-block hover:underline">
+                    <a href="./articulo1.html" class="text-blue-600 font-medium mt-4 inline-block hover:underline">
                         Leer más &rarr;
                     </a>
                 </div>
