actualizacion de arts 1 y 2

--- a/articulo2.html
+++ b/articulo2.html
@@ -43,7 +43,7 @@
                 
                 <!-- Título del Artículo -->
                 <h1 class="text-4xl font-bold text-gray-900 mb-3">
-                    Mi Primer Artículo
+                    Mi Segundo Artículo
                 </h1>
                 
                 <!-- Metadatos (Fecha) -->
