--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     <p class="text-gray-700 leading-relaxed">
                         Aquí va mi próximo artículo sobre el tema.
                     </p>
-                    <a href="./articulo1.html" class="text-blue-600 font-medium mt-4 inline-block hover:underline">
+                    <a href="./articulo2.html" class="text-blue-600 font-medium mt-4 inline-block hover:underline">
                         Leer más &rarr;
                     </a>
                 </div>
@@ -124,15 +124,13 @@
                 <h2 class="text-3xl font-bold mb-6">Conecta Conmigo</h2>
                 <div class="flex justify-center space-x-6">
                     <!-- TODO: Reemplaza "#" con tus enlaces reales -->
-                    <a href="#" class="text-gray-600 hover:text-blue-600 transition-colors text-lg font-medium">
+                    <a href="https://www.linkedin.com/ignacio-duarte" class="text-gray-600 hover:text-blue-600 transition-colors text-lg font-medium">
                         LinkedIn
                     </a>
-                    <a href="#" class="text-gray-600 hover:text-blue-600 transition-colors text-lg font-medium">
+                    <a href="https://github.com/ignaciodrd" class="text-gray-600 hover:text-blue-600 transition-colors text-lg font-medium">
                         GitHub
                     </a>
-                    <a href="#" class="text-gray-600 hover:text-blue-600 transition-colors text-lg font-medium">
-                        Twitter / X
-                    </a>
+                   
                 </div>
             </section>
 
