--- a/admin/index.html
+++ b/admin/index.html
@@ -4,16 +4,12 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Administración del Blog</title>
+  
   <!-- 
     Esto carga el script de Decap CMS (el "cerebro" del administrador)
+    Él mismo buscará el archivo config.yml automáticamente.
   -->
   <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+
 </head>
 <body>
-  <!-- 
-    Esto carga la configuración que le dice al CMS
-    cómo conectarse a tu blog.
-  -->
-  <script src="config.yml"></script>
-</body>
-</html>
