--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ layout: null
                 {{ site.title }}
             </h1>
             <p class="text-xl text-gray-600 mt-3">
-                Desarrollador, Escritor, Creador.
+                productero, escritor, creador
             </p>
         </header>
 
@@ -52,9 +52,9 @@ layout: null
                 <h2 class="text-3xl font-bold mb-4">Sobre Mí</h2>
                 <p class="text-gray-700 leading-relaxed">
                     ¡Bienvenido a mi espacio personal! Soy un apasionado por la tecnología y
-                    el aprendizaje. Este proyecto es mi primer paso para documentar mi viaje...
+                    el aprendizaje. Este proyecto fue mi primer paso para documentar mi viaje...
                 </p>
-                <a href="{{ site.baseurl }}/cv.pdf" class="inline-block mt-6 bg-blue-600 text-white font-medium py-2 px-5 rounded-lg shadow-md hover:bg-blue-700 transition-colors">
+                <a href="{{ site.baseurl }}/CV_Ejecutivo_Ignacio_Duarte.pdf" class="inline-block mt-6 bg-blue-600 text-white font-medium py-2 px-5 rounded-lg shadow-md hover:bg-blue-700 transition-colors">
                     Ver mi CV completo
                 </a>
             </section>
@@ -205,22 +205,20 @@ layout: null
             <section id="contacto" class="text-center mb-16">
                 <h2 class="text-3xl font-bold mb-6">Conecta Conmigo</h2>
                 <div class="flex justify-center space-x-6">
-                    <a href="#" class="text-gray-600 hover:text-blue-600 transition-colors text-lg font-medium">
+                    <a href="https://linkedin.com/in/ignacio-duarte" class="text-gray-600 hover:text-blue-600 transition-colors text-lg font-medium">
                         LinkedIn
                     </a>
-                    <a href="#" class="text-gray-600 hover:text-blue-600 transition-colors text-lg font-medium">
+                    <a href="https://github.com/ignaciodrd" class="text-gray-600 hover:text-blue-600 transition-colors text-lg font-medium">
                         GitHub
                     </a>
-                    <a href="#" class="text-gray-600 hover:text-blue-600 transition-colors text-lg font-medium">
-                        Twitter / X
-                    </a>
+               
                 </div>
             </section>
 
         </main>
         
         <footer class="text-center text-gray-500 py-8 border-t border-gray-200">
-            <p>&copy; 2025 {{ site.title }}. Construido con Jekyll y Tailwind CSS.</p>
+            <p>&copy; 2025 {{ site.title }}. Construido con: Jekyll y Tailwind CSS; Claude y Gemini; Github y Prose.io.</p>
         </footer>
     </div>
 </body>
