--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ layout: null
                 {{ site.title }}
             </h1>
             <p class="text-xl text-gray-600 mt-3">
-                Desarrollador, Escritor, Creador.
+                Product developer, Escritor, Creador.
             </p>
         </header>
 
@@ -208,14 +208,11 @@ layout: null
             <section id="contacto" class="text-center mb-16">
                 <h2 class="text-3xl font-bold mb-6">Conecta Conmigo</h2>
                 <div class="flex justify-center space-x-6">
-                    <a href="#" class="text-gray-600 hover:text-blue-600 transition-colors text-lg font-medium">
+                    <a href="linkedin.com/in/ignacio-duarte" class="text-gray-600 hover:text-blue-600 transition-colors text-lg font-medium">
                         LinkedIn
                     </a>
-                    <a href="#" class="text-gray-600 hover:text-blue-600 transition-colors text-lg font-medium">
+                    <a href="github.com/ignaciodrd" class="text-gray-600 hover:text-blue-600 transition-colors text-lg font-medium">
                         GitHub
-                    </a>
-                    <a href="#" class="text-gray-600 hover:text-blue-600 transition-colors text-lg font-medium">
-                        Twitter / X
                     </a>
                 </div>
             </section>
