--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ layout: null
                 {{ site.title }}
             </h1>
             <p class="text-xl text-gray-600 mt-3">
-                Product developer, Escritor, Creador.
+                product developer, escritor, creador.
             </p>
         </header>
 
@@ -220,7 +220,7 @@ layout: null
         </main>
         
         <footer class="text-center text-gray-500 py-8 border-t border-gray-200">
-            <p>&copy; 2025 {{ site.title }}. Construido con Jekyll y Tailwind CSS.</p>
+            <p>&copy; 2025 {{ site.title }}. Construido con Gemini, Claude y ChatGPT.</p>
         </footer>
     </div>
 </body>
