--- a/index.html
+++ b/index.html
@@ -208,10 +208,10 @@ layout: null
             <section id="contacto" class="text-center mb-16">
                 <h2 class="text-3xl font-bold mb-6">Conecta Conmigo</h2>
                 <div class="flex justify-center space-x-6">
-                    <a href="linkedin.com/in/ignacio-duarte" class="text-gray-600 hover:text-blue-600 transition-colors text-lg font-medium">
+                    <a href="https://linkedin.com/in/ignacio-duarte" target="_blank" class="text-gray-600 hover:text-blue-600 transition-colors text-lg font-medium">
                         LinkedIn
                     </a>
-                    <a href="github.com/ignaciodrd" class="text-gray-600 hover:text-blue-600 transition-colors text-lg font-medium">
+                    <a href="https://github.com/ignaciodrd" target="_blank" class="text-gray-600 hover:text-blue-600 transition-colors text-lg font-medium">
                         GitHub
                     </a>
                 </div>
