--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@ layout: null
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ site.title }} - Mi Blog Personal</title>
-    
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-84DC30PSWQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-84DC30PSWQ');
+</script>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -47,7 +55,7 @@ layout: null
                 {{ site.title }}
             </h1>
             <p class="text-xl text-gray-600 mt-3">
-                productero, escritor, creador
+                product developer, escritor, creador
             </p>
         </header>
 
