actualizacion del creado con

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ layout: null
         </main>
         
         <footer class="text-center text-gray-500 py-8 border-t border-gray-200">
-            <p>&copy; 2025 {{ site.title }}. Construido con: Jekyll y Tailwind CSS; Claude y Gemini; Github y Prose.io.</p>
+            <p>&copy; 2025 {{ site.title }}. Construido con Claude y Gemini, y Github</p>
         </footer>
     </div>
 
